tests/language_tests/pass/0036_comments_inside_nested_blocks.ee
fn main() {
    {
        // comment inside nested block
        print(7);
    }
}
