tests/language_tests/fail/0075_string_modulo.ee
fn main() {
    print("abc" % "b");
}
